remote theme plugin install

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,10 @@ github_username:  pcdean2000
 
 # Build settings
 theme: minima
+# remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
